# dataform-sqlx-linter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/run-checks/: action.yml
.github/workflows/: ci.yml  integration-action.yml
src/dataform_sqlx_linter/: __main__.py  runner.py
src/dataform_sqlx_linter/checks/: column_descriptions.py  description.py  hardcoded_fqns.py  schema.py
src/dataform_sqlx_linter/utils/: io.py  printing.py
tests/: test_column_descriptions.py  test_description.py  test_hardcoded_fqns.py  test_runner.py  test_schema.py
